# sagar-id-maker

./: index.html  package.json  vite.config.ts
.github/workflows/: build-windows.yml
class 8/: main.csv
src/: App.tsx  lib.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
