[package]
name = "id-maker"
version = "0.1.0"
description = "Offline ID card maker"
authors = ["ID Maker"]
edition = "2021"

[lib]
name = "id_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
